updated UI structure;

--- a/public/index.html
+++ b/public/index.html
@@ -2,44 +2,93 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Ideas</title>
     <link rel="stylesheet" href="vendors/bulma.css">
     <!--<link rel="stylesheet" href="app/css/style.css">-->
 </head>
 <body>
-
-<div class="container">
-    <!--<div class="columns is-mobile is-1">-->
-        <!--<div class="column">-->
-    <div class="tile is-ancestor">
-        <div class="tile is-parent">
-            <h1 class="title">Yesterday</h1>
-            <div class="tile is-ancestor">
-                <div class="tile notification is-primary">
-                    1<!-- The magical tile element! -->
+<section class="section">
+    <div class="container">
+        <div class="columns is-mobile is-centered">
+            <div class="column has-text-centered">
+                <h1 class="title">Yesterday</h1>
+                <div class="tile is-ancestor">
+                    <div class="tile is-parent is-vertical">
+                        <div class="tile notification is-primary">
+                            <div class="content">
+                                <h2>1</h2>
+                                <p>Text1</p>
+                            </div>
+                        </div>
+                        <div class="tile notification is-primary">
+                            <div class="content">
+                                <h2>2</h2>
+                                <p>Text2</p>
+                            </div>
+                        </div>
+                        <div class="tile notification is-primary">
+                            <div class="content">
+                                <h2>3</h2>
+                                <p>Text3</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
-        <!--<div class="column">-->
-        <div class="tile is-parent">
-            <h1 class="title">Today</h1>
-            <div class="tile is-ancestor">
-                <div class="tile">
-                    1<!-- The magical tile element! -->
+            <div class="column has-text-centered has-text-centered-mobile">
+                <h1 class="title">Today</h1>
+                <div class="tile is-ancestor">
+                    <div class="tile is-parent is-vertical">
+                        <div class="tile notification is-primary">
+                            <div class="content">
+                                <h2>1</h2>
+                                <p>Text1</p>
+                            </div>
+                        </div>
+                        <div class="tile notification is-primary">
+                            <div class="content">
+                                <h2>2</h2>
+                                <p>Text2</p>
+                            </div>
+                        </div>
+                        <div class="tile notification is-primary">
+                            <div class="content">
+                                <h2>3</h2>
+                                <p>Text3</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
-        <!--<div class="column">-->
-        <div class="tile is-parent">
-            <h1 class="title">Tomorrow</h1>
-            <div class="tile is-ancestor">
-                <div class="tile">
-                    1<!-- The magical tile element! -->
+            <div class="column has-text-centered">
+                <h1 class="title">Tomorrow</h1>
+                <div class="tile is-ancestor">
+                    <div class="tile is-parent is-vertical">
+                        <div class="tile notification is-primary">
+                            <div class="content">
+                                <h2>1</h2>
+                                <p>Text1</p>
+                            </div>
+                        </div>
+                        <div class="tile notification is-primary">
+                            <div class="content">
+                                <h2>2</h2>
+                                <p>Text2</p>
+                            </div>
+                        </div>
+                        <div class="tile notification is-primary">
+                            <div class="content">
+                                <h2>3</h2>
+                                <p>Text3</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
+</section>
 
 <script src="vendors/babel.js"></script>
 <script src="vendors/pouchdb.js"></script>
