--- a/public/index.html
+++ b/public/index.html
@@ -5,82 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Ideas</title>
     <link rel="stylesheet" href="vendors/bulma.css">
-    <!--<link rel="stylesheet" href="app/css/style.css">-->
 </head>
 <body>
-<section class="section">
+<section id="app" class="section">
     <div class="container">
         <div class="columns is-mobile is-centered">
-            <div class="column has-text-centered">
-                <h1 class="title">Yesterday</h1>
+            <div v-for="day in days"
+                 class="column has-text-centered">
+                <h1 class="title">{{day.name}}</h1>
                 <div class="tile is-ancestor">
                     <div class="tile is-parent is-vertical">
-                        <div class="tile notification is-primary">
+                        <div v-for="note in day.data"
+                             class="tile notification is-primary">
                             <div class="content">
-                                <h2>1</h2>
-                                <p>Text1</p>
-                            </div>
-                        </div>
-                        <div class="tile notification is-primary">
-                            <div class="content">
-                                <h2>2</h2>
-                                <p>Text2</p>
-                            </div>
-                        </div>
-                        <div class="tile notification is-primary">
-                            <div class="content">
-                                <h2>3</h2>
-                                <p>Text3</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="column has-text-centered has-text-centered-mobile">
-                <h1 class="title">Today</h1>
-                <div class="tile is-ancestor">
-                    <div class="tile is-parent is-vertical">
-                        <div class="tile notification is-primary">
-                            <div class="content">
-                                <h2>1</h2>
-                                <p>Text1</p>
-                            </div>
-                        </div>
-                        <div class="tile notification is-primary">
-                            <div class="content">
-                                <h2>2</h2>
-                                <p>Text2</p>
-                            </div>
-                        </div>
-                        <div class="tile notification is-primary">
-                            <div class="content">
-                                <h2>3</h2>
-                                <p>Text3</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="column has-text-centered">
-                <h1 class="title">Tomorrow</h1>
-                <div class="tile is-ancestor">
-                    <div class="tile is-parent is-vertical">
-                        <div class="tile notification is-primary">
-                            <div class="content">
-                                <h2>1</h2>
-                                <p>Text1</p>
-                            </div>
-                        </div>
-                        <div class="tile notification is-primary">
-                            <div class="content">
-                                <h2>2</h2>
-                                <p>Text2</p>
-                            </div>
-                        </div>
-                        <div class="tile notification is-primary">
-                            <div class="content">
-                                <h2>3</h2>
-                                <p>Text3</p>
+                                <h2>{{note.name}}</h2>
+                                <p>{{note.description}}</p>
                             </div>
                         </div>
                     </div>
@@ -92,9 +31,11 @@
 
 <script src="vendors/babel.js"></script>
 <script src="vendors/pouchdb.js"></script>
+<script src="https://unpkg.com/vue"></script>
 
 <script src="app/register-service-worker.js"></script>
 
+<script type="text/babel" src="index.js"></script>
 <script type="text/babel" src="app/store.js"></script>
 <script type="text/babel" src="app/app.js"></script>
 <script type="text/babel">
