added webpack experiments; added appcache generation;

--- a/public/index.html
+++ b/public/index.html
@@ -29,20 +29,12 @@
     </div>
 </section>
 
-<script src="vendors/babel.js"></script>
 <script src="vendors/pouchdb.js"></script>
 <script src="https://unpkg.com/vue"></script>
 
 <script src="app/register-service-worker.js"></script>
 
-<script type="text/babel" src="index.js"></script>
-<script type="text/babel" src="app/store.js"></script>
-<script type="text/babel" src="app/app.js"></script>
-<script type="text/babel">
-    new IdeasStore(new Store('ideas', "http://localhost:5984", () => {
-        this.refresh();
-    }));
-</script>
+<script type="text/javascript" src="index.js"></script>
 
 </body>
 </html>
