--- a/public/index.html
+++ b/public/index.html
@@ -29,12 +29,8 @@
     </div>
 </section>
 
-<script src="vendors/pouchdb.js"></script>
-<script src="https://unpkg.com/vue"></script>
-
+<script src="vendors/require.js"></script>
 <script src="app/register-service-worker.js"></script>
-
-<script type="text/javascript" src="index.js"></script>
-
+<script src="require.config.js"></script>
 </body>
 </html>
